--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@pnotify/core": "^5.2.0",
+    "animate.css": "^4.1.1",
     "basiclightbox": "^5.0.4",
     "default-passive-events": "^2.0.0",
     "infinite-scroll": "^4.0.1",
